MPT-15833 Update configuration to manage Azure Tenant Id env

--- a/helm/swo-extension-aws/charts/worker/templates/deployment.yaml
+++ b/helm/swo-extension-aws/charts/worker/templates/deployment.yaml
@@ -15,8 +15,8 @@ spec:
   template:
     metadata:
       labels:
-        app.pyracloud.com/access-policy: {{ .Values.accessPolicy }} 
-        app.pyracloud.com/access-policy-audience: {{ .Values.accessPolicyAudience }} 
+        app.pyracloud.com/access-policy: {{ .Values.accessPolicy }}
+        app.pyracloud.com/access-policy-audience: {{ .Values.accessPolicyAudience }}
         {{- include "common.labels" . | nindent 8 }}
     spec:
       volumes:
@@ -58,7 +58,7 @@ spec:
                   name: ops-pyc-cluster-teamsetup-pyra-xcluster-credentials
                   key: PYRA_PYRA__AZUREAD__AUTHENTICATION__CERTIFICATEPATH
             - name: AZURE_TENANT_ID
-              value:  {{ .Values.global.azure_tenant_id }}
+              value:  {{ .Values.global.AzureTenantId }}
           volumeMounts:
             - name: pyra-keyvault-certificate
               mountPath: "/app/pyra-keyvault-certificate"
@@ -108,14 +108,14 @@ spec:
             podAffinityTerm:
               labelSelector:
                 matchExpressions:
-                - key: app.kubernetes.io/name 
+                - key: app.kubernetes.io/name
                   operator: In
                   values:
-                  - {{ include "common.name" . }} 
+                  - {{ include "common.name" . }}
                 - key: app.kubernetes.io/instance
                   operator: In
                   values:
-                  - {{ .Release.Name }} 
+                  - {{ .Release.Name }}
               topologyKey: "kubernetes.io/hostname"
     {{- with .Values.tolerations }}
       tolerations:
