--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,7 +148,7 @@ per-file-ignores = [
   "swo_aws_extension/flows/validation/base.py: WPS407",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
-  "swo_aws_extension/swo/mpt/sync/syncer.py: WPS202 WPS118 WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426",
+  "swo_aws_extension/swo/mpt/sync/syncer.py: WPS210 WPS213",
   "tests/aws/test_config.py: WPS202",
   "tests/aws/test_errors.py: WPS202",
   "tests/flows/validation/test_base.py: WPS118",
@@ -157,9 +157,7 @@ per-file-ignores = [
   "tests/swo/ccp/test_client.py: WPS202 WPS211",
   "tests/aws/test_client.py: WPS432 WPS202 WPS204",
   "tests/test_initializer.py: WPS111 WPS213 WPS218 WPS230 WPS431",
-  "tests/swo/mpt/sync/test_syncer.py: WPS118 WPS214 WPS432 WPS202 WPS204 WPS210 WPS211 WPS301 WPS420",
   "tests/swo/mpt/sync/conftest.py: WPS430 WPS202 WPS118",
-  "tests/swo/finops/test_client.py: WPS202 WPS204 WPS210",
   "tests/swo/rql/test_query_builder.py: AAA01 AAA05 WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604",
 ]
 
