--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,6 +146,7 @@ per-file-ignores = [
   "swo_aws_extension/swo/ccp/client.py: WPS210 WPS214",
   "swo_aws_extension/flows/fulfillment/pipelines.py: WPS201",
   "swo_aws_extension/flows/validation/base.py: WPS407",
+  "swo_aws_extension/flows/order_utils.py: WPS202",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
   "swo_aws_extension/swo/mpt/sync/syncer.py: WPS210 WPS213",
