MPT-17206 Create job to skip check handshake status if pending for more than 4 day
(cherry picked from commit bc8da5629c5339093f054b4a2a250b3e6f443045)

--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,6 @@ EXT_CRM_OAUTH_URL=https://bit-ba-test.xxxx/oauth/token
 EXT_CRM_CLIENT_ID=33faer-xxxx
 EXT_CRM_CLIENT_SECRET=C1dtF-xxxx
 EXT_CRM_AUDIENCE=https://swo-ip-unified-ticketing-uat.xxx
+EXT_QUERYING_TIMEOUT_DAYS=4
 MPT_NOTIFY_CATEGORIES={"ORDERS": "NTC-XXXX-XXXX"}
+
