--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -38,7 +38,6 @@ global:
   MpNotifyCategories: "{}"
   MpInitializer: swo_aws_extension.initializer.initialize
   ManagementRole: default
-  OnboardCustomerRole: default
   ApnRoleName: default
   ApnAccountId: default
   replicaCountAPI: 1
@@ -46,6 +45,7 @@ global:
   registryUrl: ""
   AzureTenantId: ""
   QueryingTimeoutDays: 4
+  CloudOrchestratorApiBaseUrl: default
 
   cronjobs:
     order-querying:
