MPT-17271 Fix version of opentelemetry-instrumentation-botocore to 0.60b0 to avoid conflicts with dependabot
(cherry picked from commit 788313ea6ae45a5654751c4adb2a8d74d5a6c2e1)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,8 @@ updates:
     ignore:
       - dependency-name: "django"
         versions: ["*"]
+      - dependency-name: "opentelemetry-instrumentation-botocore"
+        versions: ["*"]
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
