--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
   "jinja2==3.1.*",
   "markdown-it-py==4.0.*",
   "mpt-extension-sdk==5.17.*",
-  "opentelemetry-instrumentation-botocore==0.60.*",
+  "opentelemetry-instrumentation-botocore==0.60b0",  # fix version, because extension-sdk has opentelemetry-sdk==1.39.0 fixed
   "pyairtable==2.3.*",
   "pymsteams==0.2.*",
   "requests==2.32.*",
