--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,7 +123,7 @@ per-file-ignores = [
   "swo_aws_extension/flows/order_utils.py: WPS202",
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
-  "swo_aws_extension/swo/mpt/sync/syncer.py: WPS210 WPS213",
+  "swo_aws_extension/swo/mpt/sync/syncer.py: WPS202 WPS204 WPS210 WPS213",
   "tests/aws/test_config.py: WPS202",
   "tests/aws/test_errors.py: WPS202",
   "tests/flows/validation/test_base.py: WPS118",
