--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,8 @@ per-file-ignores = [
   "tests/test_initializer.py: WPS111 WPS213 WPS218 WPS230 WPS431",
   "tests/swo/mpt/sync/conftest.py: WPS430 WPS202 WPS118",
   "tests/swo/rql/test_query_builder.py: AAA01 AAA05 WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604",
+  "tests/processor/querying/test_aws_customer_roles.py: WPS118 WPS202 WPS211", 
+  "tests/flows/steps/crm_tickets/test_ticket_manager.py: WPS118 WPS211"
 ]
 
 [tool.ruff]
