--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ readme = "README.md"
 license = { text = "Apache-2.0 license" }
 
 dependencies = [
+  "azure-storage-blob==12.24.*",
   "boto3==1.42.*",
   "django==4.2.*",
   "jinja2==3.1.*",
   "markdown-it-py==4.0.*",
   "mpt-extension-sdk==5.17.*",
+  "openpyxl==3.1.*",
   "opentelemetry-instrumentation-botocore==0.60b0",  # fix version, because extension-sdk has opentelemetry-sdk==1.39.0 fixed
   "pyairtable==2.3.*",
   "pymsteams==0.2.*",
@@ -124,6 +126,7 @@ per-file-ignores = [
   "swo_aws_extension/swo/rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478",
   "swo_aws_extension/swo/finops/client.py: WPS231 WPS505 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458",
   "swo_aws_extension/swo/mpt/sync/syncer.py: WPS202 WPS204 WPS210 WPS213",
+  "swo_aws_extension/flows/jobs/invitations_report_creator.py: WPS210 WPS214 WPS229 WPS231 WPS407",
   "tests/aws/test_config.py: WPS202",
   "tests/aws/test_errors.py: WPS202",
   "tests/flows/validation/test_base.py: WPS118 WPS210",
@@ -135,7 +138,8 @@ per-file-ignores = [
   "tests/swo/mpt/sync/conftest.py: WPS430 WPS202 WPS118",
   "tests/swo/rql/test_query_builder.py: AAA01 AAA05 WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604",
   "tests/processor/querying/test_aws_customer_roles.py: WPS118 WPS202 WPS211", 
-  "tests/flows/steps/crm_tickets/test_ticket_manager.py: WPS118 WPS211"
+  "tests/flows/steps/crm_tickets/test_ticket_manager.py: WPS118 WPS211",
+  "tests/flows/jobs/test_invitations_report_creator.py:  WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS218 WPS219 WPS221 WPS404 WPS432"
 ]
 
 [tool.ruff]
