--- a/helm/swo-extension-aws/charts/worker/templates/secret.yaml
+++ b/helm/swo-extension-aws/charts/worker/templates/secret.yaml
@@ -13,3 +13,4 @@ data:
   EXT_MSTEAMS_WEBHOOK_URL: {{ .Values.global.MsTeamsWebhookUrl }}
   EXT_CRM_CLIENT_SECRET: {{ .Values.global.CrmClientSecret }}
   EXT_FFC_OPERATIONS_SECRET: {{ .Values.global.FfcOperationsSecret }}
+  EXT_AZURE_STORAGE_CONNECTION_STRING: {{ .Values.global.AzureStorageConnectionString}}
