feat: adopt mpt-tool

--- a/.env.sample
+++ b/.env.sample
@@ -1,19 +1,22 @@
-MPT_PRODUCTS_IDS=PRD-1111-1111
-MPT_PORTAL_BASE_URL=http://devmock:8000
-MPT_API_BASE_URL=http://devmock:8000
-MPT_API_TOKEN=<vendor-api-token>
-MPT_ORDERS_API_POLLING_INTERVAL_SECS=120
-EXT_WEBHOOKS_SECRETS={"PRD-1111-1111":"<super-jwt-secret>"}
-EXT_MSTEAMS_WEBHOOK_URL=https://whatever.webhook.office.com/webhookb2/<...>
-EXT_CCP_CLIENT_ID=123456789
 EXT_AWS_OPENID_SCOPE=urn://dev.aws.services.softwareone.com/.default
-EXT_CCP_OAUTH_URL=https://login.microsoftonline.com/<tenant_id>/oauth2/v2.0/token
 EXT_AWS_REGION=us-east-1
+EXT_CCP_CLIENT_ID=123456789
+EXT_CCP_OAUTH_URL=https://login.microsoftonline.com/<tenant_id>/oauth2/v2.0/token
 EXT_CRM_API_BASE_URL=https://swo-ip-apim-xxx
-EXT_CRM_OAUTH_URL=https://bit-ba-test.xxxx/oauth/token
+EXT_CRM_AUDIENCE=https://swo-ip-unified-ticketing-uat.xxx
 EXT_CRM_CLIENT_ID=33faer-xxxx
 EXT_CRM_CLIENT_SECRET=C1dtF-xxxx
-EXT_CRM_AUDIENCE=https://swo-ip-unified-ticketing-uat.xxx
+EXT_CRM_OAUTH_URL=https://bit-ba-test.xxxx/oauth/token
+EXT_MSTEAMS_WEBHOOK_URL=https://whatever.webhook.office.com/webhookb2/<...>
 EXT_QUERYING_TIMEOUT_DAYS=4
+EXT_WEBHOOKS_SECRETS={"PRD-1111-1111":"<super-jwt-secret>"}
+MPT_API_BASE_URL=http://devmock:8000
+MPT_API_TOKEN=<vendor-api-token>
 MPT_NOTIFY_CATEGORIES={"ORDERS": "NTC-XXXX-XXXX"}
-
+MPT_ORDERS_API_POLLING_INTERVAL_SECS=120
+MPT_PORTAL_BASE_URL=http://devmock:8000
+MPT_PRODUCTS_IDS=PRD-1111-1111
+MPT_TOOL_STORAGE_TYPE=local
+MPT_TOOL_STORAGE_AIRTABLE_API_KEY=<fake-airtable-api-key>
+MPT_TOOL_STORAGE_AIRTABLE_BASE_ID=<fake-storage-airtable-base-id>
+MPT_TOOL_STORAGE_AIRTABLE_TABLE_NAME=<fake-storage-airtable-table-name>
