--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,12 @@ repos:
       - id: flake8
         additional_dependencies:
           [
-            "flake8-aaa==0.17.*",
-            "flake8-pyproject==1.2.*",
-            "wemake-python-styleguide==1.5.*",
+            flake8-aaa==0.17.*,
+            flake8-pyproject==1.2.*,
+            wemake-python-styleguide==1.5.*,
           ]
+
+  - repo: https://github.com/softwareone-platform/mpt-tool
+    rev: 5.3.0
+    hooks:
+      - id: check-migrations
