--- a/helm/swo-extension-aws/charts/worker/templates/configmap.yaml
+++ b/helm/swo-extension-aws/charts/worker/templates/configmap.yaml
@@ -45,3 +45,4 @@ data:
   EXT_DEPLOY_SERVICES_FEATURE_RECIPIENTS: {{ .Values.global.DeployServicesFeatureRecipients | quote }}
   EXT_AZURE_STORAGE_CONTAINER: {{ .Values.global.AzureStorageContainer | quote }}
   EXT_AZURE_STORAGE_SAS_EXPIRY_DAYS: {{ .Values.global.AzureStorageSasExpiryDays | quote }}
+  EXT_REPORT_INVITATIONS_FOLDER: {{ .Values.global.ReportInvitationsFolder | quote }}
