--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -1,4 +1,5 @@
 global:
+  keyVaultUri: default
   OTELServiceName: Swo.Extensions.AWS
   AppInsightsConnectionString: ZGVmYXVsdA==
   ServiceName: default
@@ -10,8 +11,8 @@ global:
   MpProductsIds: default
   WebhookSecretKeys: ZGVmYXVsdA==
   AirTableApiToken: ZGVmYXVsdA==
-  AirTablePoolBase: '{}'
-  AirTableNotificationPoolBase: '{}'
+  AirTablePoolBase: "{}"
+  AirTableNotificationPoolBase: "{}"
   MsTeamsWebhookUrl: ZGVmYXVsdA==
   EmailNotificationsSender: default
   EmailNotificationsEnabled: "1"
@@ -54,7 +55,7 @@ global:
   AzureStorageContainer: private
   AzureStorageSasExpiryDays: 7
   ReportInvitationsFolder: reports/aws/billing-transfer-invitations/
-  
+
   cronjobs:
     order-querying:
       schedule: ""
