--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,8 +111,8 @@ statistics = false
 # To be fixed and removed
 per-file-ignores = [
   "migrations/*.py: WPS102",
-  "tests/**/*.py: WPS202 WPS204 WPS210 WPS211 WPS213 WPS402 WPS231",
-  "tests/*.py: WPS202 WPS204 WPS210 WPS211 WPS213 WPS402 WPS231",
+  "tests/**/*.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS213 WPS402 WPS231",
+  "tests/*.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS213 WPS402 WPS231",
   "swo_aws_extension/apps.py: WPS300",
   "swo_aws_extension/aws/client.py: WPS214",
   "swo_aws_extension/config.py: WPS122 WPS121 WPS214",
